--- a/background-pic.css
+++ b/background-pic.css
@@ -1,4 +1,4 @@
-.peopleColumn-29fq28 {
+.bg-h5JY_x {
     background-image: var(--background-image);
     background-position: var(--background-position);
     background-size: var(--background-size);
