--- a/background-pic.css
+++ b/background-pic.css
@@ -3,3 +3,9 @@
     background-position: var(--background-position);
     background-size: var(--background-size);
     }
+
+.tabBody-3YRQ8W {
+    background-image: var(--background-image);
+    background-position: var(--background-position);
+    background-size: var(--background-size);
+  }
